c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/pointer_conversions/usual_arithmetic_conversions_ptr.c
int main(void) {
  // can't convert void * to int with usual arithmetic conversions
  int i = 10 * (void *)0;
}